包结构调整